--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ node_modules
 ## Please do not remove line 12 - thanks! 🙂 ##
 ###############################################
 *.xd
+dist
 
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
